test/fails/bad_geo/mult_fail.lgl
tag a is vec<2>;
tag b is vec<3>;
tag c is b;

void main() {
    c x = [3., 3., 3.];
    b->a b_a = [[1., 1.], [1., 1.], [1., 1.]];

    vec2 fail = (b_a .* b_a) * x; // CMult is weird
}
